# avr_cmake_env

./: CMakeLists.txt  README.md
cmake-modules/: generic-gcc-avr.cmake
demos/: CMakeLists.txt
demos/avr01-blink/: CMakeLists.txt  avr01-blink.c
demos/avr02-adc/: CMakeLists.txt  avr02-adc.c
include/: avr_macros.h
src/: CMakeLists.txt
